--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "chmod +x node_modules/vite/bin/vite.js && vite build",
+  "preview": "vite preview"
+}
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
@@ -16,4 +16,4 @@
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.0"
   }
-}
+  
