--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-  "postinstall": "chmod +x node_modules/vite/bin/vite.js",
+  "postinstall": "chmod +x ./node_modules/.bin/vite",
   "dev": "vite",
   "build": "vite build",
   "preview": "vite preview"
